--- a/package.json
+++ b/package.json
@@ -2,14 +2,20 @@
   "name": "prjcasamentobackend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "prjcasamentobackend": "file:"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
   }
 }
